--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-1.72MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 波兰-446.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 波兰-563.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 波兰-484.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 波兰-335.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-371.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-234.4KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in05.dns2333.xyz}}
+  - {name: 🇨🇳 中国-11.64MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in03.dns2333.xyz}}
+  - {name: 🇨🇳 中国-480.4KB/s(Youtube:不良林), server: in05.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in05.dns2333.xyz}}
+  - {name: 🇨🇳 中国-855.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-934.5KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63041, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-884.5KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: cp-asus.ml, port: 50275, type: trojan, password: 7Z29DRr1ts, sni: cp-asus.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-259.9KB/s(Youtube:不良林), server: 5.183.179.139, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇩🇪 德国-315.7KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 波兰-446.1KB/s(Youtube:不良林)
-      - 波兰-563.9KB/s(Youtube:不良林)
-      - 波兰-484.5KB/s(Youtube:不良林)
-      - 波兰-335.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-234.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-480.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-934.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-884.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-259.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
