--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-166.2KB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 波兰-381.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 波兰-371.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇨🇳 中国-193.6KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-855.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in04.dns2333.xyz}}
+  - {name: 🇨🇳 中国-310.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-294.0KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-170.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-311.8KB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63041, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in04.dns2333.xyz}}
   - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: cp-asus.ml, port: 50275, type: trojan, password: 7Z29DRr1ts, sni: cp-asus.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-315.7KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-269.9KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-289.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-653.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-200.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
-      - 波兰-381.7KB/s(Youtube:不良林)
-      - 波兰-371.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-193.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-855.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-315.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
