--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇨🇳 中国-310.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-294.0KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-170.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26220, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-311.8KB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63041, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mg, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: cp-asus.ml, port: 50275, type: trojan, password: 7Z29DRr1ts, sni: cp-asus.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-269.9KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-289.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-653.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-200.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-166.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-3.22MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in04.dns2333.xyz}}
+  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-365.6KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-281.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-269.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-653.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
