--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,9 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-166.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-3.22MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 63088, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇳 中国-365.6KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-281.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-293.5KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-326.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +16,18 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +35,9 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +49,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +68,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +87,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-281.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
