--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-166.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-293.5KB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63078, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-326.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林), server: 185.167.116.252, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林), server: 185.167.116.252, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林), server: 185.167.116.252, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-166.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-326.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-723.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-284.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-212.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
